fix unwanted horizontal scrollbar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -15,6 +15,10 @@ body{
     width: 100%;
     background-color: #fff;
 
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+
 }
 
 #about{
